tdf#117805 DOCX export: fix lost header with at-page anchored frames

The bug has two parts: on one hand, the header was not completely lost,
just was written inside a shape. This is not valid, but at least our own
import understood that. This commit restores that old behavior, focusing
on just the regression part of the bugreport.

On the other hand the exported header is still referenced at an
incorrect location: the correct location would be the end of the
document. But that is follow-up work, it seems that never worked.

Change-Id: I468df9013c65ec581e3a474a5bf2f773fcb4f990
Reviewed-on: https://gerrit.libreoffice.org/56058
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>